<resources>
    <string name="app_name">Corner</string>

    <string name="txt_usuario">Usuário</string>
    <string name="txt_cpf">CPF</string>
    <string name="txt_senha">Senha</string>
    <string name="txt_entrar">Entrar</string>
    <string name="txt_primeiro_acesso">Primeiro acesso? Clique aqui</string>
    <string name="txt_esqueceu_senha">Esqueci minha senha</string>
    <string name="txt_nome">Nome</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_cadastrar">Cadastrar</string>
    <string name="txt_portfolio">Portfólio</string>
    <string name="txt_cat_corte">Categorias de corte</string>
    <string name="txt_famosos">Famosos</string>
    <string name="txt_enrolado">Enrolado</string>
    <string name="txt_degrade">Degrade</string>
    <string name="txt_longo">Longo</string>
    <string name="txt_curto">Curto</string>
    <string name="txt_nome_barbeiro">Nome Barbeiro</string>
    <string name="txt_cortex">Corte X</string>
    <string name="txt_cortes">Cortes</string>
    <string name="txt_barbas">Barbas</string>
    <string name="txt_selecione_barbeiro">Selecione o barbeiro</string>
    <string name="txt_selecione_data">29/10/2018</string>
    <string name="txt_9h">09:00</string>
    <string name="txt_10h">10:00</string>
    <string name="txt_12h">12:00</string>
    <string name="txt_17h">17:00</string>
    <string name="txt_data">29/10, segunda-feira</string>
    <string name="txt_agendado">Agendado com:</string>
    <string name="txt_agendar">Agendar</string>
    <string name="txt_barbeiro">Barbeiro</string>
    <string name="txt_maquina">Máquina - R$ 30,00</string>
    <string name="txt_corte">Corte - R$ 30,00</string>
    <string name="txt_barba">Barba - R$ 19,90</string>
    <string name="txt_corte_fem">Corte - R$ 40,00</string>
    <string name="txt_escova">Escova - R$ 20,00</string>
    <string name="txt_hidratacao">Hidratacao - R$ 45,00</string>
    <string name="dialog_titulo">Confirmar agendamento</string>
    <string name="dialog_mensagem">Deseja confirmar o agendamento do serviço para 29/10 às 09h?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="info_confirmado_agendamento">Agendamento confirmado</string>
    <string name="info_cancelado_agendamento">Agendamento CANCELADO</string>

    <string name="nav_home">Início</string>
    <string name="nav_agenda">Agenda</string>
    <string name="nav_fidelidade">Fidelidade</string>

    <string name="desc_logo">Corner Logo</string>
    <string name="desc_corte_famoso">Cortes famosos</string>
    <string name="desc_corte_enrolado">Corte enrolado</string>
    <string name="desc_corte_degrade">Corte degrade</string>
    <string name="desc_corte_longo">Corte longo</string>
    <string name="desc_corte_curto">Corte curto</string>
    <string name="desc_foto_barbeiro">Foto do barbeiro</string>

    <string name="tab_masculino">Masculino</string>
    <string name="tab_feminino">Feminino</string>

</resources>
