<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ativities.ServicoActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tvDataServico"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/black"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:text="@string/txt_data"
        android:textAlignment="center"
        android:textColor="@color/colorDourado"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvHoraServico"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:text="@string/txt_9h"
        android:textAlignment="center"
        android:textColor="@color/colorDourado"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDataServico" />

    <TextView
        android:id="@+id/tvAgendadoServico"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txt_agendado"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnAgendarServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAgendarServico"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="24dp"
        android:background="@android:color/black"
        android:onClick="abrirDialog"
        android:text="@string/txt_agendar"
        android:textColor="@color/colorDourado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvBarbeiroServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txt_barbeiro"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnAgendarServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvAgendadoServico" />

    <Button
        android:id="@+id/btnMasculinoServico"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:background="#aaa"
        android:elevation="2dp"
        android:onClick="abrirMasculino"
        android:text="@string/tab_masculino"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHoraServico" />

    <Button
        android:id="@+id/btnFemininoServico"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#aaa"
        android:onClick="abrirFeminino"
        android:text="@string/tab_feminino"
        app:layout_constraintBottom_toBottomOf="@+id/btnMasculinoServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/btnMasculinoServico" />

    <FrameLayout
        android:id="@+id/frameServico"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="52dp"
        android:background="#aaa"
        android:elevation="10dp"
        android:paddingTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/tvAgendadoServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMasculinoServico">

    </FrameLayout>

</android.support.constraint.ConstraintLayout>