<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.MasculinoFragment">

    <CheckBox
        android:id="@+id/cbCorteFeminino"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:paddingStart="50dp"
        android:paddingEnd="40dp"
        android:text="@string/txt_corte_fem"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />

    <CheckBox
        android:id="@+id/cbEscovaFeminino"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:paddingStart="50dp"
        android:paddingEnd="40dp"
        android:text="@string/txt_escova"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />

    <CheckBox
        android:id="@+id/cbHidratacaoFeminino"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:paddingStart="50dp"
        android:paddingEnd="40dp"
        android:text="@string/txt_hidratacao"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

</LinearLayout>